[package]
name = "sui-harvest"
version = "0.1.0"
edition = "2021"

[lib]
name = "harvestlib"
path = "src/lib.rs"

[[bin]]
name = "harvest"
path = "src/main.rs"

[[bin]]
name = "index_identifiers"
path = "src/index_identifiers_main.rs"


[[bin]]
name = "extract_events"
path = "src/extractevents.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk", branch="mainnet"}
sui-data-ingestion-core = { git = "https://github.com/mystenlabs/sui", package = "sui-data-ingestion-core", branch="mainnet"}
sui-types = { git = "https://github.com/mystenlabs/sui", package = "sui-types", branch="mainnet"}
move-core-types = { git = "https://github.com/mystenlabs/sui", package = "move-core-types", branch="mainnet"}

tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1.78"
colored = "2.1.0"
clap = "4.5.3"
prometheus = "0.13.3"
tempfile = "3.10.1"
futures = "0.3.30"
bcs = "0.1.6"
serde = "1.0.197"
flate2 = "1.0.28"
env_logger = "0.11.5"